# edalize-plugins

./: .pre-commit-config.yaml  dev_requirements.txt  pyproject.toml  sourceme
src/edalize/flows/: depcheck.py
src/edalize/tools/: flist.py  xcelium.py
tests/depcheck/: depcheck.core  example.sv  example_dep.core  example_dep.sv
tests/flist/: README.md  example.sv  flist.core  flist_child.core  waiver.vlt
